--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,13 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <meta name="description" content="Great Decentralized Password Manager!" />
+  <meta property="og:url" content="https:///www.encryptedbox.co" />
+  <meta property="og:type" content="site" />
+  <meta property="og:title" content="Encrypted Box" />
+  <meta property="og:description" content="Great Decentralized Password Manager!" />
+  <meta property="og:image" content="https://www.encryptedbox.co/assets/icono.png" />
 
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
